--- a/lib/chapter4.tex
+++ b/lib/chapter4.tex
@@ -11,16 +11,35 @@ Finalmente, se describirán los algoritmos de aprendizaje automático utilizados
 Se ha utilizado un enfoque de investigación cuantitativa para examinar la progresión temporal de la bronquiolitis en pacientes pediátricos. Como se ha mencionado anteriormente se van a realizar $2$ estudios diferentes con distinto enfoque:
 
 \begin{itemize}
-    \item El primer estudio, \textit{Estudio 1}, como se ha tratado anteriormente en la Sección de selección de pacientes válidos para los distintos estudios, Sección~\ref{sec:metodologias_exclusion_pacientes}, se va a centrar en el estudio de todos los pacientes pediátricos considerando las primeras $24$ horas desde el ingreso. En este caso se valorará de manera general la evolución de los pacientes y diferencias entre aquellos que se les ha intervenido con OAF y los que no.
-    \item  En el segundo estudio, \textit{Estudio 2}, se valorará la evolución de los pacientes que han necesitado OAF y se comparará con los que no han necesitado OAF para así poder generar un modelo que permita predecir si un paciente va a necesitar OAF o no en las siguientes próximas horas.
+    \item El primer estudio, \textit{Estudio 1}, como se ha tratado anteriormente en la Sección~\ref{sec:metodologias_exclusion_pacientes} de selección de pacientes válidos para los distintos estudios, se va a centrar en el estudio de todos los pacientes pediátricos considerando las primeras $24$ horas desde el ingreso. En este caso se valorará de manera general la evolución de los pacientes y diferencias entre aquellos que se les ha intervenido con OAF y los que no. En este estudio simplemente se tendrán en consideración las variables \textit{Series Temporales} referenciadas en la tabla~\ref{tabla:variables_estudio} y se realizará un estudio descriptivo de las mismas.
+    \item  En el segundo estudio, \textit{Estudio 2}, se valorará la evolución de los pacientes que han necesitado OAF y se comparará con los que no han necesitado OAF para así poder generar un modelo que permita predecir si un paciente va a necesitar OAF o no en las siguientes próximas horas. Es este estudio se pretenderá realizar un modelo que permita prever la necesidad de OAF en las 8 h de ingreso. ad de OAF en las horas siguientes de las 
 \end{itemize}
 
+Se utilizarán aquellas variables que se han definido anteriormente en la Sección~\ref{sec:tiposdevariables} y en concreto de aquellas recogidas en la Tabla~\ref{tabla:variables_estudio}:
 
-Se utilizarán aquellas variables que se han definido anteriormente en la Sección~\ref{sec:tiposdevariables} ha partido de 47 variables descriptivas y de 2 variables que muestran la evolución temporal de los pacientes durante las primeras 24 h de ingreso y que han sido tratadas en el presente trabajo como series temporales. 
+\begin{itemize}
+    \item Descriptivas dentro del \textit{scope} del estudio.
+    \item Temporales en $3$ Intervalos dentro del \textit{scope}.
+    \item Series Temporales.
+\end{itemize}
 
-Idealmente se ha planteado que al tener 3 momentos de valoración; en las 8 primeras horas, entre las 8 y 16 horas y entre las 16 y 24 horas, se realicen 3 modelos diferentes para los diferentes momentos y que estos modelos permitan valorar la evolución del paciente, es decir si va a necesitar OAF o no va a necesitarla al final de estos intervalos.
+Las variables utilizadas e el \textit{Estudio 2} será menos que las usadas en el \textit{Estudio 1}
 
-En este estudio este planteamiento se muestra limitado puesto que más de la mitad de pacientes que se han considerado válidos para el estudio (según el criterio valid_patient_2 adoptado en el apartado ***) que necesitan OAF la requieren al ingreso o en las primeras 8 horas (De los 16 pacientes válidos que presentan deterioro 10 pacientes; 5 al ingreso y 5 antes de las 8 primeras horas). Esto supondría eliminar de la ecuación estos 10 pacientes y solo tener en cuenta a los 6 restantes para valorar las 8 primeras horas y solo a 2 para valorar las 16 primeras.
+ha partido de 47 variables descriptivas y de 2 variables que muestran la evolución temporal de los pacientes durante las primeras 24 h de ingreso y que han sido tratadas en el presente trabajo como series temporales. 
+
+
+Explicación de los distintos Estudios:
+
+
+En el caso del Estudio 2:
+
+Idealmente 
+
+Idealmente se ha planteado que al tener 3 momentos de valoración; en las $8$ primeras horas, entre las $8$ y $16$ horas siguientes y entre las $16$ y $24$ últimas horas, se realicen $3$ modelos distintos de clasificación para los diferentes momentos de valoración y que estos modelos permitan valorar la evolución del paciente, es decir si va a necesitar OAF o no va a necesitarla al final de estos intervalos. Es decir, una vez pasadas las $8$ primeas horas se pretende valorar si el paciente va a necesitar OAF en las próximas $8$ horas y así sucesivamente. 
+
+De cara a plantear esta metodología para este estudio existe el factor limitante de la muestra de pacientes con la que se trabaja, dónde la mayoría de pacientes no sufren OAF y por tanto no se puede realizar un estudio de este tipo dónde se divide por intervalos a la muestra de pacientes que sufren OAF. A continuación se muestra en relación al \textit{Estudio 1} cómo se distribuyen los pacientes que han necesitado OAF:
+
+En este estudio este planteamiento se muestra limitado puesto que más de la mitad de pacientes que se han considerado válidos para el estudio (según el criterio valid\_patient\_2 adoptado en el apartado ***) que necesitan OAF la requieren al ingreso o en las primeras 8 horas (De los 16 pacientes válidos que presentan deterioro 10 pacientes; 5 al ingreso y 5 antes de las 8 primeras horas). Esto supondría eliminar de la ecuación estos 10 pacientes y solo tener en cuenta a los 6 restantes para valorar las 8 primeras horas y solo a 2 para valorar las 16 primeras.
 
 \begin{figure}[H]
     \centering
