--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -199,8 +199,8 @@ Se ha realizado un estudio de los datos faltantes. Este estudio ha consistido en
 
 \subparagraph*{Variables con Datos Faltantes} 
 
-En la siguiente Figura~\ref{fig:missing-descriptive} se muestra la distribución de datos faltantes de las variables referenciadas en la Tabla \ref{tabla:cuali_cuanti}. 
- 
+
+En la siguiente Figura~\ref{fig:missing-descriptive} se muestra la distribución de datos faltantes de las variables referenciadas en la Tabla~\ref{tabla:cuali_cuanti}. 
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.70]{./img/missig-data-descriptive.png}
@@ -375,10 +375,10 @@ Junto con este último criterio mencionado se van a hacer dos grupos de paciente
     \end{table}
 \end{itemize}
 
-Una vez se han definido los dos conjuntos de pacientes que se van a considerar en el presente trabajo, se ha decidido pues que se van a realizar $2$ estudios:
+Una vez se han definido los dos conjuntos de pacientes que se van a considerar en el presente trabajo, se ha decidido pues que se van a realizar $2$ estudios, cada uno tendrá en cuenta un conjunto diferente de pacientes:
 
 \begin{itemize}
-    \item \textbf{Estudio 1:} Se estudiarán a los pacientes pediátricos tomando como referencia las primeras $24$ horas de monitorización, se querrá así pues mantener la unidad \textit{día} en el estudio. Se ha visto que reduciendo el \textit{scope} según el \textit{Método 2} no se consigue un aumento de la muestra de pacientes significativa, y por otro lado reducir la restricción de pacientes con valores faltantes por encima del $5\%$ para aumentar la cantidad de pacientes en el estudio, no es recomendable según la referencia antes mencionada: \cite{Scheffer2002}.
+    \item \textbf{Estudio 1:} Se estudiarán a los pacientes pediátricos tomando como referencia las primeras $24$ horas de monitorización, se querrá así pues mantener la unidad \textit{día} en el estudio. Se ha visto que reduciendo el \textit{scope} según el \textit{Método 2} no se consigue un aumento de la muestra de pacientes significativa, y por otro lado reducir la restricción de pacientes con valores faltantes por encima del $5\%$ para aumentar la cantidad de pacientes en el estudio, no es recomendable según la referencia antes mencionada:~\cite{Scheffer2002}.
     \item \textbf{Estudio 2:} Se estudiarán los pacientes pediátricos tomando como referencia las primeras $8$ horas de monitorización y se excluirán a aquellos pacientes que han presentado OAF en esas 8 primeras horas así como las variables que se registran más tarde de las $8$ primeras horas. Se ha decidido utilizar las primeras $8$ horas de monitorización ya que se pretende predecir en las primeras $8$ horas qué pacientes son los que van a presentar \textit{Deterioro} en las siguientes.
 \end{itemize}
 
