--- a/lib/chapter5.tex
+++ b/lib/chapter5.tex
@@ -1,4 +1,4 @@
-\section{RESULTS AND DISCUSSION}\label{sec:resultsanddiscussion}
+\section{RESULTS AND DISCUSSION}\label{cap:resultsANDdiscussion}
 
 This chapter presents the results of the research and provides an interpretation of their implications for heart rate classification in infants. The chapter is divided into two main sections: Results and Discussion.
 
